fix: changed the footer color scheme to add contrast to the booking-form section

--- a/css/index.css
+++ b/css/index.css
@@ -494,7 +494,7 @@ footer *{
         display: block;
         width: max-content !important;
         margin-right: 80px;
-        color: #222 !important;
+        color: #eee !important;
         margin-bottom: 20px
     } 
     
